[package]
name = "cookie_parser"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Artem Tarasenko <artem.tarasenko@ukma.edu.ua,shabashab.04@gmail.com>"]
description = "A tool to parse contents of Cookie/Set-Cookie headers"
repository = "https://github.com/shabashab/cookie-parser"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
pest = "2.7.14"
pest_derive = "2.7.14"
thiserror = "2.0.3"
